Подготовка к сдаче
добавить exception handler, доработать логику местами.